add webpage for CoRL2022 Project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 data/.DS_Store
 images/.DS_Store
 data/Cover Letters/
+Projects/ProjectTemplate_1_Nerfies
+Projects/ProjectTemplate_2_DeepStereopsis
